<resources>
    <string name="app_name">Ventas</string>
    <string name="Mapa">Mapa</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Contraseña">Contraseña:</string>
    <string name="titulo">134057 - EDGAR JIMENEZ</string>
    <string name="ctehoy">Clientes de hoy</string>
    <string name="ctetotales">Clientes totales</string>
    <string name="ReporteVendedor">Gráficas</string>
    <string name="title_activity_grafica__vendedor">KPI’s Vendedor</string>
    <string name="title_activity_kpi__general">KPI_General</string>
    <string name="visitas">Visitados:</string>
    <string name="title_activity_pedidos">Pedidos</string>
    <string name="title_activity_pcabecera">pcabecera</string>
    <string name="title_activity_pdetalle">pdetalle</string>
    <string name="title_activity_pliquidacion">pliquidacion</string>
    <string name="Nopedido">No. Pedido:</string>
    <string name="pedido">Pedidos</string>
    <string name="tipopago">Tipo de pago:</string>
    <string name="Entrega">Entrega:</string>
    <string name="Pedidos">Pedidos:</string>
    <string name="KPIgral">KPI General</string>
    <string name="title_activity_pedido">Pedido</string>
    <string name="tipo_pedido">Tipo de pedido:</string>
    <string name="title_activity_catalogo">Catalogo</string>
    <string name="Guardar">Guardar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Agregarp">Agregar productos de catalogo</string>
    <string name="title_activity_actualizar_coord">Actualizar coord</string>
    <string name="Latitud">Latitud:</string>
    <string name="Longitud">Longitud:</string>
    <string name="Actualizar">Actualizar</string>
    <string name="title_activity_actualizar__coordenadas">Actualizar Coordenadas</string>
    <string name="title_activity_info_producto">Info_producto</string>
    <string name="title_activity_dib_firma">Dib_firma</string>
    <string name="title_activity_sincronizar">Sincronizar</string>
    <string name="title_activity_estatus_respuestas">estatus_respuestas</string>
    <string name="title_activity_respuesta_pedidos">RespuestaPedidos</string>
    <string name="title_activity_encabezados_pedidos">Encabezados_pedidos</string>
    <string name="title_activity_detalle_pedidos">DetallePedidos</string>
    <string name="title_activity_alta_clientes">AltaClientes</string>
    <string name="tittleDevolucionesTxt">Devoluciones</string>
    <string name="disponibilidadTxt">Disponibilidad de devoluciones</string>
    <string name="promedioTxt">Promedio de venta (3 meses):</string>
    <string name="datosTxt">Datos</string>
    <string name="importeTxt">Importe</string>
    <string name="foliosDentroPresupuestodoTxt">Folios en el presupuesto:</string>
    <string name="foliosAutorizacionMermaTxt">Folios merma:</string>
    <string name="foliosNoAceptadosTxt">Folios NO aceptados:</string>
    <string name="devolucionDisponibleTxt">Devolución disponible:</string>
    <string name="devolucionPptoTxt">Devoluciones autorizadas con ppto:</string>
    <string name="consultaDevolucionesTxt">Consulta devoluciones</string>
    <string name="nuevaDevolucionTxt">Nueva devolucion</string>
    <string name="txtDevLiteConfTittleClient">Nombre del Cliente</string>
    <string name="txtDevLiteConfAmountPackages">Cantidad de bultos</string>
    <string name="txtDevLiteConfDocumentType">Tipo de documento</string>
    <string name="txtDevLiteConfFolioDocument">Folio de factura</string>
    <string name="txtDevLiteConfNumberRepayment">Folio de devolución</string>
    <string name="txtDevLiteCaptReasonRefund">Motivo de devolución</string>
    <string name="txtDevLiteCaptShortName">Nombre corto</string>
    <string name="txtDevLiteCaptCodeMarzam">Código Marzam</string>
    <string name="txtDevLiteCaptBarcode">Código de barras</string>
    <string name="txtDevLiteCaptProductSelect">Productos:</string>
    <string name="txtDevLitePromptProduct">Producto:</string>
    <string name="txtDevLitePromptProductAmount">Cantidad:</string>
    <string name="txtDevLitePromptAdd1">+1</string>
    <string name="txtDevLitePromptAdd2">+2</string>
    <string name="txtDevLitePromptAdd5">+5</string>
    <string name="txtDevLitePromptAdd10">+10</string>
    <string name="txtDevLitePromptAccept">Aceptar</string>
    <string name="txtAmountProductReturn">Cantidad:</string>
    <string name="txtCodeProduct">Código producto:</string>
    <string name="txtReasonDocument">Documento de devolución:</string>
    <string name="txtReasonReturn">Motivo devolución:</string>
    <string name="txtBtnFinishReturnProduct">Enviar</string>
    <string name="txtDevLitePromptReset0">0</string>
    <string name="txtDevLiteConfAddPackage">Agregar bulto</string>
    <string name="txtDevLiteCaptSearchByName">Buscar por nombre</string>
    <string name="txtDevLiteCaptSearchByMarzamCode">Buscar por codigo marzam</string>
    <string name="txtDevLiteCaptSearchByBarCode">Buscar por código de barras</string>
    <string name="title_activity_direccion">Dirección</string>
    <string name="por_visitar">Visitas adicionales:</string>
    <string name="txtDevLiteCaptSearch">Buscar producto</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pago_parcial">Pago parcial: </string>
    <string name="pago_total">Pago total: </string>
    <string name="seleccion_pago">Seleccionar tipo de pago: </string>
    <string name="hint_buscador"><i>Buscar por número de factura</i></string>
    <string name="total_importe">Deuda total:</string>
    <string name="total_cubrir">Monto total a aplicar:</string>
    <string name="total_pendiente">Restante total:</string>
    <string name="sin_internet">Sin conexión a internet</string>
    <string name="error_usuario">Error, intentelo de nuevo</string>
    <string name="num_fac">Número de factura: </string>
    <string name="fecha_emision">Fecha emision: </string>
    <string name="fecha_ven">Fecha vencimiento: </string>
    <string name="dias_f">Días atraso: </string>
    <string name="importe">Importe: </string>
    <string name="adeudo_p">Adeudo pendiente: </string>
    <string name="adeudo_c">Adeudo a cubrir: </string>
    <string name="selec_banco_cheque">Seleccionar banco</string>
    <string name="num_cheque">Núm. cheque</string>
    <string name="fecha_cheque">Fecha cheque</string>
    <string name="num_transb">Núm. trans. bancaria</string>
    <string name="fecha_transb">Fecha trans. bancaria</string>
    <string name="num_notac">Núm. nota crédito</string>
    <string name="fecha_notac">Fecha nota crédito</string>
    <string name="monto_notac">Monto nota crédito</string>
    <string name="num_fichap">Núm. ficha pago</string>
    <string name="fecha_fichap">Fecha ficha pago</string>
    <string name="num_fichab">Núm. ficha bancaria</string>
    <string name="fecha_fichab">Fecha ficha bancaria</string>
    <string name="dias_adapter">días</string>
    <string name="tipo_pago">Seleccione un tipo de pago</string>
    <string name="efectivo">Efectivo</string>
    <string name="cheque">Cheque</string>
    <string name="nota_credito">Nota de crédito</string>
    <string name="transferencia_bancaria">Transferencia bancaria</string>
    <string name="ficha_pago">Ficha de pago</string>
    <string name="ficha_bancaria">Ficha bancaria</string>
    <string name="btnguardar_dialog">Guardar</string>
    <string name="sinseleccionar_dialog">Debe seleccionar una forma de pago</string>
    <string name="seleccion_banco_dialog">Seleccione un banco</string>
    <string name="num_cheque_dialog">Introduzca el número de cheque</string>
    <string name="fecha_cheque_dialog">Introduzca la fecha del cheque</string>
    <string name="datos_guardar_dialog">Datos Guardados</string>
    <string name="seleccion_nota_credito_dialog">Seleccione una nota de crédito</string>
    <string name="monto_nota_credito_dialog">Introduzca el monto de la nota de crédito</string>
    <string name="fecha_nota_credito_dialog">Introduzca la fecha de la nota de crédito</string>
    <string name="num_trans_bancaria_dialog">Introduzca el número de la transferecnia bancaria</string>
    <string name="fecha_trans_bancaria_dialog">Introduzca la fecha de la transferecnia bancaria</string>
    <string name="num_ficha_pago_dialog">Introduzca el número de la ficha de pago</string>
    <string name="fecha_ficha_pago_dialog">Introduzca la fecha de la ficha de pago</string>
    <string name="num_ficha_bancaria_dialog">Introduzca el número de la ficha bancaria</string>
    <string name="fecha_ficha_bancaria_dialog">Introduzca la fecha de la ficha bancaria</string>
    <string name="conf_cheque">Confirmar cheque</string>
    <string name="conf_efectivo">Confirmar efectivo</string>
    <string name="conf_ficha_pago">Confirmar ficha de pago</string>
    <string name="conf_nota_cre">Confirmar nota de crédito</string>
    <string name="conf_ficha_bancaria">Confirmar ficha bancaria</string>
    <string name="conf_trans_bancaria">Confirmar transferecnia bancaria</string>
    <string name="llenar_campo">Campo Obligatorio</string>
    <string name="cubrir_adeudo">¿Desea cubrir adeudo total?</string>
    <string name="quitar_cubrir_adeudo">¿Desea quitar adeudo total?</string>
    <string name="cubrir_adeudo_si">Sí</string>
    <string name="cubrir_adeudo_no">No</string>
    <string name="confirmar">¿Desea agregar un nuevo tipo de pago?</string>
    <string name="confirmar_no">No, terminar transacción</string>
    <string name="confirmar_si">Sí</string>
    <string name="banco_prompt"> Seleccione un banco </string>
    <string name="title_activity_cobranza">Cobranza</string>
    <string name="pagos_hecho">Sus pagos han sido guardados con éxito</string>
    <string name="pagos_hecho_aceptar">Aceptar</string>
    <string name="correoe_cobranza_detalle">Correo Electrónico</string>
    <string name="msg_formato_incorrecto_num_cheque">El número de cheque debe contener 8 dígitos</string>
    <string name="msg_formato_incorrecto_trans">El número de transferencia bancaria debe contener 8 dígitos</string>
    <string name="msg_formato_incorrecto_ficha_pago">El número de la ficha de pago debe contener 8 dígitos</string>
    <string name="msg_formato_incorrecto_ficha_bancaria">El número de la ficha de bancaria debe contener 8 dígitos</string>
    <string-array name="banco_arrays">
        <item>-Seleccione un banco-</item>
        <item>BANCOMER</item>
        <item>HSBC</item>
        <item>BANAMEX</item>
        <item>SCOTIABANK</item>
        <item>SANTANDER SERFIN</item>
        <item>BANORTE</item>
    </string-array>
    <string name="notac_prompt"> Seleccione una nota </string>
    <string-array name="notac_arrays">
        <item>-Seleccione una nota-</item>
        <item>49596939</item>
        <item>49596838</item>
        <item>47576737</item>
        <item>46566636</item>
        <item>45556535</item>
        <item>44546434</item>
        <item>43536333</item>
    </string-array>
    <string name="title_activity_catalogo_edit">catalogo_edit</string>
    <string name="title_activity_tab_pedidos">tab_pedidos</string>
    <string name="title_activity_cabezera_estatus">cabezera_estatus</string>
    <string name="title_activity_detalle_estatus">detalle_estatus</string>
    <string name="title_activity_liquidacion_estatus">liquidacion_estatus</string>
    <string name="title_activity_devoluciones_full">Ddevoluciones Full</string>
    <string name="txtDevFullReturnsAvailable">Disponibilidad de devoluciones:</string>
    <string name="txtDevFullAverageSales">Promedio de venta (3 meses)</string>
    <string name="title_activity_devoluciones_full_menu_principal">Devoluciones Full Menu</string>
    <string name="title_activity_devoluciones_full_lista_motivos">Motivos de devolución</string>
</resources>