<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.marzam.com.appventas.GPS.Actualizar_Coordenadas"
    android:id="@+id/fatherContend"
    android:background="#3b3b3b">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/icono_maps2"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#FFFFFF"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Latitud"
        android:id="@+id/textView33"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="59dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Longitud"
        android:id="@+id/textView34"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/textView33"
        android:layout_alignLeft="@+id/textView33"
        android:layout_alignStart="@+id/textView33"
        android:paddingTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:id="@+id/textView35"
        android:layout_above="@+id/textView34"
        android:layout_toRightOf="@+id/textView33"
        android:layout_toEndOf="@+id/textView33"
        android:layout_alignRight="@+id/imageView2"
        android:layout_alignEnd="@+id/imageView2"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:id="@+id/textView36"
        android:layout_alignBottom="@+id/textView34"
        android:layout_toRightOf="@+id/textView34"
        android:layout_toEndOf="@+id/textView34"
        android:layout_alignRight="@+id/textView35"
        android:layout_alignEnd="@+id/textView35"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FFFFFF"
        android:paddingTop="15dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/Actualizar"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bluebutton"
        android:textColor="#FFFFFF" />

</RelativeLayout>
